Fixed cottage image overlapping
Fixes for cottage pages

--- a/Style/style.css
+++ b/Style/style.css
@@ -239,7 +239,7 @@ header {
     width: 70vh;
     height: 50vh;
     margin-top: 30vh;
-    margin-left: 27vh;
+    margin-left: 15vh;
 }
 
 /*-------------------------------*/
